Replaced 'serwis' with 'usluga'. Fixed spelling bugs. Part 2

--- a/5/current_solutions.tex
+++ b/5/current_solutions.tex
@@ -41,11 +41,11 @@ Oddcast Illustrated Characters\cite{oddcasts} jest to usługa integrująca w sob
 
 Usługa ta jest bardzo prosta w integracji. Podstawowa integracja sprowadza się do wygenerowania odpowiedniego fragmentu kodu który należy dodać do swojej aplikacji. Obsługiwane technologie to Flash i JavaScript. Tyle wystarczy aby umożliwić użytkownikowi końcowemu używanie usługi do odsłuchiwania tłumaczonego tekstu. Dodatkowo, dostępne jest API, które daje większą kontrolę nad awatarem oraz procesem przetwarzania. 
 
-Serwis integruje własnościowy syntezator mowy, który również jest dostępny jako osobna usługa. Na stronie producenta nie ma żadnych informacji na temat zastosowanego silnika translacji oraz na temat zastosowanej technologii integracyjnej.
+Usługa ta integruje własnościowy syntezator mowy, który również jest dostępny jako osobna usługa. Na stronie producenta nie ma żadnych informacji na temat zastosowanego silnika translacji oraz na temat zastosowanej technologii integracyjnej.
 
 \section {Pediaphon} 
 
-Pediaphon\cite{pediaphon} jest aplikacją integrującą funkcjonalność TTS razem z darmową encyklopedią internetową: ''Wikipedia''. Użytkownik podaje frazę, która zostaje wyszukana przy użyciu serwisu Wikipedia, a wynik wyszukiwania zostaje zamieniony na dźwięk. Użytkownik ma również opcję ustawienie parametrów przetwarzania, takich jak jakość i prędkość generowanej mowy oraz format wyjściowy. Aplikacja jest dostępna w różnych wersjach językowych w postaci strony internetowej oraz na platformy mobilne: iPhone, Android. Do syntezy mowy aplikacja wykorzystuje silnik eSpeak razem z zestawem głosów MBROLA. eSpeak jest otwartym, programowym syntezatorem mowy dostępnym w postaci bibliotek lub narzędzia wiersza poleceń. Jakość generowanego dźwięku jest znacznie gorsza od własnościowych rozwiązań takich jak IVONA.
+Pediaphon\cite{pediaphon} jest aplikacją integrującą funkcjonalność TTS razem z darmową encyklopedią internetową: Wikipedia. Użytkownik podaje frazę, która zostaje wyszukana przy użyciu encyklopedii Wikipedia, a wynik wyszukiwania zostaje zamieniony na dźwięk. Użytkownik ma również opcję ustawienie parametrów przetwarzania, takich jak jakość i prędkość generowanej mowy oraz format wyjściowy. Aplikacja jest dostępna w różnych wersjach językowych w postaci strony internetowej oraz na platformy mobilne: iPhone, Android. Do syntezy mowy aplikacja wykorzystuje silnik eSpeak razem z zestawem głosów MBROLA. eSpeak jest otwartym, programowym syntezatorem mowy dostępnym w postaci bibliotek lub narzędzia wiersza poleceń. Jakość generowanego dźwięku jest znacznie gorsza od własnościowych rozwiązań takich jak IVONA.
 
 \section*{Podsumowanie} 
 Jak widać platforma SpeechProcessingPlatform jest systemem dostarczającym niespotykaną wcześniej funkcjonalność. Dzięki możliwości kompozycji różnych procesów przetwarzania mowy, oraz obsłudze dużej ilości protokołów, może ona być zastosowana przy implementacji rozmaitych aplikacji wykorzystujących przetwarzanie mowy w różnych postaciach. Przedstawione powyżej aplikacje prezentują różne scenariusze użycia, z których każdy całkowicie lub częściowo (usługi przetwarzania mowy) mógłby zostać zaimplementowany przy użyciu prezentowanej platformy. W kolejnych rozdziałach zostanie przedstawione jakie zalety i wady ma zastosowanie gotowej platformy integracyjne w porównaniu z tradycyjnym podejściem tworzenia aplikacji od zera.
